# pg_asciifold

./: .gitignore  CMakeLists.txt  README.md  asciifolding.c  build.sh  gen.py  utf8.h
